Fix time cut off in transaction
The width of the transaction start date container was too small
The width of the surrounding container was also not set to full width

OHM-585

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -918,6 +918,7 @@ body {
     float: left;
     margin: 10px 15px 10px 0px;
     position: relative;
+    width: 100%;
   }
 
   .auditFilterDivLabel {
@@ -1445,7 +1446,7 @@ label { position: relative; }
 
 .about-info h3 { margin-top: 0px; }
 
-.compatible-versions-info { 
+.compatible-versions-info {
   border: 1px solid;
   background-color: #D9FFBE;
   border-color: #d6e9c6;
